force-app/main/default/objects/ApexTruth__c/ApexTruth__c.object-meta.xml
<CustomObject>
    <description>Used to validate expected behavior in Apex, especially for key assumptions made by the trigger workflow framework</description>
    <label>Apex Truth</label>
    <nameField>
        <label>Apex Truth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Truths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>