force-app/main/default/objects/ApexTruth__c/fields/IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To support rerun detection in the Salesforce Trigger Workflow framework. This field should never be set manually by a user or an API. Instead it should only ever be set by the Set Processed workflow rule.</description>
    <inlineHelpText>To support rerun detection in the Salesforce Trigger Workflow framework</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>