force-app/main/default/objects/ApexTruth__c/fields/NumberOfDmlOperations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDmlOperations__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of discrete DML operations that have been performed on this record, including the very first insert operation. This counter is managed by a trigger workflow.</description>
    <inlineHelpText>The number of discrete DML operations that have been performed on this record, including the very first insert operation</inlineHelpText>
    <label>Num DML Operations</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>