force-app/main/default/objects/ApexTruth__c/fields/NumberOfTriggerTouches__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTriggerTouches__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times triggers on the object have been run, as measured by a trigger workflow that increments this field by one in every possible before insert/update context</description>
    <inlineHelpText>The number of times triggers on the object have been run</inlineHelpText>
    <label>Num Trigger Touches</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>