force-app/main/default/objects/ApexTruth__c/fields/NumberOfWorkflowTouches__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWorkflowTouches__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times a round of workflow field updates has been performed on this object, as measured and tracked by the Set Num Workflow Touches workflow rule</description>
    <inlineHelpText>The number of times a round of workflow field updates has been performed on this object</inlineHelpText>
    <label>Num Workflow Touches</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>